Issue #2999637 by chipway: Apply new {project}:{module} format for dependencies in info.yml

--- a/disqus.info.yml
+++ b/disqus.info.yml
@@ -5,4 +5,4 @@ description: 'Uses the Disqus web service to enhance comments.'
 core: 8.x
 configure: disqus.settings
 dependencies:
-  - field
+  - drupal:field
