Issue #2987620 by benjifisher: Warnings caused by migration template

--- a/migrations/d7_disqus_settings.yml
+++ b/migrations/d7_disqus_settings.yml
@@ -29,7 +29,7 @@ process:
   'advanced/api/disqus_api_update': disqus_api_delete
   'advanced/sso/disqus_sso': disqus_sso
   'advanced/sso/disqus_use_site_logo': disqus_use_site_logo
-  'advanced/sso/disqus_logo':
+  'advanced/sso/disqus_logo': disqus_logo
 destination:
   plugin: config
   config_name: disqus.settings
