--- a/disqus.services.yml
+++ b/disqus.services.yml
@@ -2,3 +2,6 @@ services:
   disqus.manager:
     class: Drupal\disqus\DisqusCommentManager
     arguments: ['@entity_type.manager', '@entity_field.manager', '@current_user', '@module_handler']
+  logger.channel.disqus:
+    parent: logger.channel_base
+    arguments: ['disqus']
