Issue #3231082 by gaurav.kapoor: Fix all the issues reported by PHPCS Drupal Practice

--- a/config/install/disqus.settings.yml
+++ b/config/install/disqus.settings.yml
@@ -9,7 +9,7 @@ advanced:
   disqus_secretkey: ''
   api:
     disqus_api_update: false
-    disqus_api_delete: 'DISQUS_API_NO_ACTION'
+    disqus_api_delete: '0'
   sso:
     disqus_sso: false
     disqus_use_site_logo: false
