--- a/disqus.info.yml
+++ b/disqus.info.yml
@@ -1,8 +1,7 @@
-name: 'Disqus'
+name: Disqus
 type: module
-core_version_requirement: ^8 || ^9
-description: 'Uses the Disqus web service to enhance comments.'
-core: 8.x
+description: 'Integrated the Disqus web service to enhance comments in Drupal.'
+core_version_requirement: ^8.8 || ^9
 configure: disqus.settings
 dependencies:
   - drupal:field
