--- a/migrations/d7_disqus_settings.yml
+++ b/migrations/d7_disqus_settings.yml
@@ -2,6 +2,7 @@ id: d7_disqus_settings
 label: Disqus settings
 migration_tags:
   - Drupal 7
+  - Configuration
 source:
   plugin: variable
   variables:
