--- a/config/install/disqus.settings.yml
+++ b/config/install/disqus.settings.yml
@@ -3,6 +3,7 @@ behavior:
   disqus_localization: false
   disqus_inherit_login: false
   disqus_track_newcomment_ga: false
+  disqus_notify_newcomment: false
 advanced:
   disqus_useraccesstoken: ''
   disqus_publickey: ''
