--- a/disqus.info.yml
+++ b/disqus.info.yml
@@ -4,4 +4,5 @@ description: 'Integrated the Disqus web service to enhance comments in Drupal.'
 core_version_requirement: ^8.8 || ^9
 configure: disqus.settings
 dependencies:
+  - drupal:file
   - drupal:field
